@@ -1,3 +1,15 @@
+Wed Apr 20 14:22:57 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/ast/ast_sequence.cpp:
+        * TAO_IDL/ast/ast_structure.cpp:
+        * TAO_IDL/ast/ast_union.cpp:
+        
+          Fixed the in_recursion() method in the above node types to
+          eliminate a false positive result in the test for the
+          presence of a recursive type. The false positive occured
+          when a struct or union contained more than one member of
+          the same non-primitive type.
+
 Wed Apr 20 09:57:21 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* tao/Alias_TypeCode.h:
